<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".SettingsActivity">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:title=" ">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="?actionBarSize"
            android:fontFamily="@font/audiowide"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="@color/settingsColorPrimary"
            android:textSize="@dimen/text_20sp" />
    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_56"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/text_padding_start"
                android:paddingEnd="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_20">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_14"
                    android:layout_weight="1"
                    android:fontFamily="@font/audiowide"
                    android:text="@string/sound"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_16sp" />

                <Switch
                    android:id="@+id/soundSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    style="@style/SwitchTheme"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="@dimen/dp_20"
                android:fontFamily="@font/audiowide"
                android:text="@string/grid_size"
                android:textColor="@color/settingsColorPrimary"
                android:textSize="@dimen/title_text_size"
                android:paddingStart="@dimen/text_padding_start"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/settingsRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginBottom="@dimen/dp_20"
                android:fontFamily="@font/audiowide"
                android:text="@string/reflex_mode"
                android:textColor="@color/settingsColorPrimary"
                android:textSize="@dimen/title_text_size"
                android:paddingStart="@dimen/text_padding_start"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dp_66"
                android:paddingEnd="@dimen/dp_40">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_14"
                    android:layout_weight="1"
                    android:fontFamily="@font/audiowide"
                    android:text="@string/traps"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_16sp" />

                <Switch
                    android:id="@+id/trapSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    style="@style/SwitchTheme"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginBottom="@dimen/dp_20"
                android:fontFamily="@font/audiowide"
                android:text="@string/memory_mode"
                android:textColor="@color/settingsColorPrimary"
                android:textSize="@dimen/title_text_size"
                android:paddingStart="@dimen/text_padding_start"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/randomBtn"
                    android:layout_width="@dimen/cardview_width"
                    android:layout_height="@dimen/cardview_height"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    app:cardCornerRadius="8dp"
                    android:layout_margin="@dimen/cardview_margin">
                    <TextView
                        android:id="@+id/randomText"
                        android:layout_width="@dimen/cardview_width"
                        android:layout_height="@dimen/cardview_height"
                        android:fontFamily="@font/audiowide"
                        android:gravity="center"
                        android:text="@string/random"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_16sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/repeatBtn"
                    android:layout_width="@dimen/cardview_width"
                    android:layout_height="@dimen/cardview_height"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    app:cardCornerRadius="8dp"
                    android:layout_margin="@dimen/cardview_margin">
                    <TextView
                        android:id="@+id/repeatText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/audiowide"
                        android:gravity="center"
                        android:text="@string/repeat"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_16sp" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/save_btn_margin_bottom"
                android:layout_marginTop="@dimen/save_btn_margin_top"
                android:background="@drawable/button_bg"
                android:theme="@style/GreenButtonThemeOverlay"
                android:fontFamily="@font/audiowide"
                android:paddingStart="@dimen/save_btn_padding"
                android:paddingEnd="@dimen/save_btn_padding"
                android:text="@string/save"
                android:textColor="@android:color/white" />
        </LinearLayout>


    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>